--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
-web:
-  build: .
-  working_dir: /data
-  command: python mvc.py
-  links:
-    - db
-  volumes:
-    - .:/data
-  ports:
-    - "8888:8888"
+services:
+  web:
+    build: .
+    working_dir: /data
+    command: python mvc.py
+    links:
+      - db
+    volumes:
+      - .:/data
+    ports:
+      - "8888:8888"
 
-db:
-  image: mysql:5.7
-  environment:
+  db:
+    image: mysql:5.7
+    environment:
       MYSQL_ROOT_PASSWORD: mudar123
-  ports:
-    - "3306:3306"
+    ports:
+      - "3306:3306"
